--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ wrapper/Build wrapper.bat
 wrapper/Build wrapper.bat
 wrapper/Build wrapper.bat
 wrapper/Build wrapper.bat
+Exported-2025-10-25.vssettings
