--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ wrapper/Build wrapper.bat
 wrapper/Build wrapper.bat
 wrapper/Build wrapper.bat
 Exported-2025-10-25.vssettings
+/wrapper-stub/Cal3DWrapperStub/.vs/Cal3DWrapperStub/CopilotIndices
+/wrapper-stub/Cal3DWrapperStub/.vs/Cal3DWrapperStub/FileContentIndex
+/wrapper-stub/Cal3DWrapperStub/.vs/Cal3DWrapperStub/v17
+/wrapper-stub/Cal3DWrapperStub/Cal3DWrapperStub/Debug
+/wrapper-stub/Cal3DWrapperStub/Cal3DWrapperStub/x64
+/wrapper-stub/Cal3DWrapperStub/.vs/Cal3DWrapperStub/copilot-chat
